--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,13 +1,13 @@
-name: LucidPunish
+name: NeuroPunish
 version: '${git.commit.id.describe-short}'
-main: me.neuroweed.lucidpunish.Main
-prefix: LucidPunish
+main: me.neuroweed.neuropunish.Main
+prefix: NeuroPunish
 load: STARTUP
 authors: [ neuroweed420 ]
 commands:
   punish:
-    description: LucidPunish Command
+    description: NeuroPunish Command
     aliases: [p]
   punishmentsreasons:
-    description: Show the LucidPunish IDs
+    description: Show the NeuroPunish IDs
     aliases: [pr, preasons]
